# server-push

./: pyproject.toml  requirements.txt
src/: notification.py  settings.py  test_notification.py
